Clean up model inspection warnings